simdX86/c2nimsrc/simdAvx.h

import simdX86Types
export simdX86Types

@#

__m256i _mm256_abs_epi16 (__m256i a);
__m256i _mm256_abs_epi32 (__m256i a);
__m256i _mm256_abs_epi8 (__m256i a);
__m256i _mm256_add_epi16 (__m256i a, __m256i b);
__m256i _mm256_add_epi32 (__m256i a, __m256i b);
__m256i _mm256_add_epi64 (__m256i a, __m256i b);
__m256i _mm256_add_epi8 (__m256i a, __m256i b);
__m256d _mm256_add_pd (__m256d a, __m256d b);
__m256 _mm256_add_ps (__m256 a, __m256 b);
__m256i _mm256_adds_epi16 (__m256i a, __m256i b);
__m256i _mm256_adds_epi8 (__m256i a, __m256i b);
__m256i _mm256_adds_epu16 (__m256i a, __m256i b);
__m256i _mm256_adds_epu8 (__m256i a, __m256i b);
__m256d _mm256_addsub_pd (__m256d a, __m256d b);
__m256 _mm256_addsub_ps (__m256 a, __m256 b);
__m256i _mm256_alignr_epi8 (__m256i a, __m256i b, const int count);
__m256d _mm256_and_pd (__m256d a, __m256d b);
__m256 _mm256_and_ps (__m256 a, __m256 b);
__m256i _mm256_and_si256 (__m256i a, __m256i b);
__m256d _mm256_andnot_pd (__m256d a, __m256d b);
__m256 _mm256_andnot_ps (__m256 a, __m256 b);
__m256i _mm256_andnot_si256 (__m256i a, __m256i b);
__m256i _mm256_avg_epu16 (__m256i a, __m256i b);
__m256i _mm256_avg_epu8 (__m256i a, __m256i b);
__m256i _mm256_blend_epi16 (__m256i a, __m256i b, const int imm8);
__m128i _mm_blend_epi32 (__m128i a, __m128i b, const int imm8);
__m256i _mm256_blend_epi32 (__m256i a, __m256i b, const int imm8);
__m256d _mm256_blend_pd (__m256d a, __m256d b, const int imm8);
__m256 _mm256_blend_ps (__m256 a, __m256 b, const int imm8);
__m256i _mm256_blendv_epi8 (__m256i a, __m256i b, __m256i mask);
__m256d _mm256_blendv_pd (__m256d a, __m256d b, __m256d mask);
__m256 _mm256_blendv_ps (__m256 a, __m256 b, __m256 mask);
__m256d _mm256_broadcast_pd (__m128d const * mem_addr);
__m256 _mm256_broadcast_ps (__m128 const * mem_addr);
__m256d _mm256_broadcast_sd (double const * mem_addr);
__m128 _mm_broadcast_ss (float const * mem_addr);
__m256 _mm256_broadcast_ss (float const * mem_addr);
__m128i _mm_broadcastb_epi8 (__m128i a);
__m256i _mm256_broadcastb_epi8 (__m128i a);
__m128i _mm_broadcastd_epi32 (__m128i a);
__m256i _mm256_broadcastd_epi32 (__m128i a);
__m128i _mm_broadcastq_epi64 (__m128i a);
__m256i _mm256_broadcastq_epi64 (__m128i a);
__m128d _mm_broadcastsd_pd (__m128d a);
__m256d _mm256_broadcastsd_pd (__m128d a);
__m256i _mm256_broadcastsi128_si256 (__m128i a);
__m128 _mm_broadcastss_ps (__m128 a);
__m256 _mm256_broadcastss_ps (__m128 a);
__m128i _mm_broadcastw_epi16 (__m128i a);
__m256i _mm256_broadcastw_epi16 (__m128i a);
__m256i _mm256_bslli_epi128 (__m256i a, const int imm8);
__m256i _mm256_bsrli_epi128 (__m256i a, const int imm8);
__m256 _mm256_castpd_ps (__m256d a);
__m256i _mm256_castpd_si256 (__m256d a);
__m256d _mm256_castpd128_pd256 (__m128d a);
__m128d _mm256_castpd256_pd128 (__m256d a);
__m256d _mm256_castps_pd (__m256 a);
__m256i _mm256_castps_si256 (__m256 a);
__m256 _mm256_castps128_ps256 (__m128 a);
__m128 _mm256_castps256_ps128 (__m256 a);
__m256i _mm256_castsi128_si256 (__m128i a);
__m256d _mm256_castsi256_pd (__m256i a);
__m256 _mm256_castsi256_ps (__m256i a);
__m128i _mm256_castsi256_si128 (__m256i a);
__m256d _mm256_ceil_pd (__m256d a);
__m256 _mm256_ceil_ps (__m256 a);
__m128d _mm_cmp_pd (__m128d a, __m128d b, const int imm8);
__m256d _mm256_cmp_pd (__m256d a, __m256d b, const int imm8);
__m128 _mm_cmp_ps (__m128 a, __m128 b, const int imm8);
__m256 _mm256_cmp_ps (__m256 a, __m256 b, const int imm8);
__m128d _mm_cmp_sd (__m128d a, __m128d b, const int imm8);
__m128 _mm_cmp_ss (__m128 a, __m128 b, const int imm8);
__m256i _mm256_cmpeq_epi16 (__m256i a, __m256i b);
__m256i _mm256_cmpeq_epi32 (__m256i a, __m256i b);
__m256i _mm256_cmpeq_epi64 (__m256i a, __m256i b);
__m256i _mm256_cmpeq_epi8 (__m256i a, __m256i b);
__m256i _mm256_cmpgt_epi16 (__m256i a, __m256i b);
__m256i _mm256_cmpgt_epi32 (__m256i a, __m256i b);
__m256i _mm256_cmpgt_epi64 (__m256i a, __m256i b);
__m256i _mm256_cmpgt_epi8 (__m256i a, __m256i b);
__m256i _mm256_cvtepi16_epi32 (__m128i a);
__m256i _mm256_cvtepi16_epi64 (__m128i a);
__m256i _mm256_cvtepi32_epi64 (__m128i a);
__m256d _mm256_cvtepi32_pd (__m128i a);
__m256 _mm256_cvtepi32_ps (__m256i a);
__m256i _mm256_cvtepi8_epi16 (__m128i a);
__m256i _mm256_cvtepi8_epi32 (__m128i a);
__m256i _mm256_cvtepi8_epi64 (__m128i a);
__m256i _mm256_cvtepu16_epi32 (__m128i a);
__m256i _mm256_cvtepu16_epi64 (__m128i a);
__m256i _mm256_cvtepu32_epi64 (__m128i a);
__m256i _mm256_cvtepu8_epi16 (__m128i a);
__m256i _mm256_cvtepu8_epi32 (__m128i a);
__m256i _mm256_cvtepu8_epi64 (__m128i a);
__m128i _mm256_cvtpd_epi32 (__m256d a);
__m128 _mm256_cvtpd_ps (__m256d a);
__m256i _mm256_cvtps_epi32 (__m256 a);
__m256d _mm256_cvtps_pd (__m128 a);
__m128i _mm256_cvttpd_epi32 (__m256d a);
__m256i _mm256_cvttps_epi32 (__m256 a);
__m256d _mm256_div_pd (__m256d a, __m256d b);
__m256 _mm256_div_ps (__m256 a, __m256 b);