simdX86/simdAvxGeneric.nim


proc abs_epi16*(a: m256i): m256i {.importc: "_mm256_abs_epi16", header: "immintrin.h".}
proc abs_epi32*(a: m256i): m256i {.importc: "_mm256_abs_epi32", header: "immintrin.h".}
proc abs_epi8*(a: m256i): m256i {.importc: "_mm256_abs_epi8", header: "immintrin.h".}
proc add_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_add_epi16",
                                       header: "immintrin.h".}
proc add_epi32*(a: m256i; b: m256i): m256i {.importc: "_mm256_add_epi32",
                                       header: "immintrin.h".}
proc add_epi64*(a: m256i; b: m256i): m256i {.importc: "_mm256_add_epi64",
                                       header: "immintrin.h".}
proc add_epi8*(a: m256i; b: m256i): m256i {.importc: "_mm256_add_epi8",
                                      header: "immintrin.h".}
proc add*(a: m256d; b: m256d): m256d {.importc: "_mm256_add_pd", header: "immintrin.h".}
proc add*(a: m256; b: m256): m256 {.importc: "_mm256_add_ps", header: "immintrin.h".}
proc adds_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_adds_epi16",
                                        header: "immintrin.h".}
proc adds_epi8*(a: m256i; b: m256i): m256i {.importc: "_mm256_adds_epi8",
                                       header: "immintrin.h".}
proc adds_epu16*(a: m256i; b: m256i): m256i {.importc: "_mm256_adds_epu16",
                                        header: "immintrin.h".}
proc adds_epu8*(a: m256i; b: m256i): m256i {.importc: "_mm256_adds_epu8",
                                       header: "immintrin.h".}
proc addsub*(a: m256d; b: m256d): m256d {.importc: "_mm256_addsub_pd",
                                    header: "immintrin.h".}
proc addsub*(a: m256; b: m256): m256 {.importc: "_mm256_addsub_ps",
                                 header: "immintrin.h".}
proc alignr_epi8*(a: m256i; b: m256i; count: cint): m256i {.
    importc: "_mm256_alignr_epi8", header: "immintrin.h".}
proc `and`*(a: m256d; b: m256d): m256d {.importc: "_mm256_and_pd", header: "immintrin.h".}
proc `and`*(a: m256; b: m256): m256 {.importc: "_mm256_and_ps", header: "immintrin.h".}
proc and_si256*(a: m256i; b: m256i): m256i {.importc: "_mm256_and_si256",
                                       header: "immintrin.h".}
proc andnot*(a: m256d; b: m256d): m256d {.importc: "_mm256_andnot_pd",
                                    header: "immintrin.h".}
proc andnot*(a: m256; b: m256): m256 {.importc: "_mm256_andnot_ps",
                                 header: "immintrin.h".}
proc andnot_si256*(a: m256i; b: m256i): m256i {.importc: "_mm256_andnot_si256",
    header: "immintrin.h".}
proc avg_epu16*(a: m256i; b: m256i): m256i {.importc: "_mm256_avg_epu16",
                                       header: "immintrin.h".}
proc avg_epu8*(a: m256i; b: m256i): m256i {.importc: "_mm256_avg_epu8",
                                      header: "immintrin.h".}
proc blend_epi16*(a: m256i; b: m256i; imm8: cint): m256i {.
    importc: "_mm256_blend_epi16", header: "immintrin.h".}
proc blend_epi32*(a: m128i; b: m128i; imm8: cint): m128i {.importc: "_mm_blend_epi32",
    header: "immintrin.h".}
proc blend_epi32*(a: m256i; b: m256i; imm8: cint): m256i {.
    importc: "_mm256_blend_epi32", header: "immintrin.h".}
proc blend*(a: m256d; b: m256d; imm8: cint): m256d {.importc: "_mm256_blend_pd",
    header: "immintrin.h".}
proc blend*(a: m256; b: m256; imm8: cint): m256 {.importc: "_mm256_blend_ps",
    header: "immintrin.h".}
proc blendv_epi8*(a: m256i; b: m256i; mask: m256i): m256i {.
    importc: "_mm256_blendv_epi8", header: "immintrin.h".}
proc blendv*(a: m256d; b: m256d; mask: m256d): m256d {.importc: "_mm256_blendv_pd",
    header: "immintrin.h".}
proc blendv*(a: m256; b: m256; mask: m256): m256 {.importc: "_mm256_blendv_ps",
    header: "immintrin.h".}
proc broadcast*(mem_addr: ptr m128d): m256d {.importc: "_mm256_broadcast_pd",
    header: "immintrin.h".}
proc broadcast*(mem_addr: ptr m128): m256 {.importc: "_mm256_broadcast_ps",
                                       header: "immintrin.h".}
proc broadcast_sd*(mem_addr: ptr cdouble): m256d {.importc: "_mm256_broadcast_sd",
    header: "immintrin.h".}
proc broadcast_ss*(mem_addr: ptr cfloat): m128 {.importc: "_mm_broadcast_ss",
    header: "immintrin.h".}
proc broadcast_ss*(mem_addr: ptr cfloat): m256 {.importc: "_mm256_broadcast_ss",
    header: "immintrin.h".}
proc broadcastb_epi8*(a: m128i): m128i {.importc: "_mm_broadcastb_epi8",
                                     header: "immintrin.h".}
proc broadcastb_epi8*(a: m128i): m256i {.importc: "_mm256_broadcastb_epi8",
                                     header: "immintrin.h".}
proc broadcastd_epi32*(a: m128i): m128i {.importc: "_mm_broadcastd_epi32",
                                      header: "immintrin.h".}
proc broadcastd_epi32*(a: m128i): m256i {.importc: "_mm256_broadcastd_epi32",
                                      header: "immintrin.h".}
proc broadcastq_epi64*(a: m128i): m128i {.importc: "_mm_broadcastq_epi64",
                                      header: "immintrin.h".}
proc broadcastq_epi64*(a: m128i): m256i {.importc: "_mm256_broadcastq_epi64",
                                      header: "immintrin.h".}
proc broadcastsd*(a: m128d): m128d {.importc: "_mm_broadcastsd_pd",
                                 header: "immintrin.h".}
proc broadcastsd*(a: m128d): m256d {.importc: "_mm256_broadcastsd_pd",
                                 header: "immintrin.h".}
proc broadcastsi128_si256*(a: m128i): m256i {.
    importc: "_mm256_broadcastsi128_si256", header: "immintrin.h".}
proc broadcastss*(a: m128): m128 {.importc: "_mm_broadcastss_ps",
                               header: "immintrin.h".}
proc broadcastss*(a: m128): m256 {.importc: "_mm256_broadcastss_ps",
                               header: "immintrin.h".}
proc broadcastw_epi16*(a: m128i): m128i {.importc: "_mm_broadcastw_epi16",
                                      header: "immintrin.h".}
proc broadcastw_epi16*(a: m128i): m256i {.importc: "_mm256_broadcastw_epi16",
                                      header: "immintrin.h".}
proc bslli_epi128*(a: m256i; imm8: cint): m256i {.importc: "_mm256_bslli_epi128",
    header: "immintrin.h".}
proc bsrli_epi128*(a: m256i; imm8: cint): m256i {.importc: "_mm256_bsrli_epi128",
    header: "immintrin.h".}
proc castps*(a: m256d): m256 {.importc: "_mm256_castpd_ps", header: "immintrin.h".}
proc castsi256*(a: m256d): m256i {.importc: "_mm256_castpd_si256",
                               header: "immintrin.h".}
proc castpd256*(a: m128d): m256d {.importc: "_mm256_castpd128_pd256",
                               header: "immintrin.h".}
proc castpd128*(a: m256d): m128d {.importc: "_mm256_castpd256_pd128",
                               header: "immintrin.h".}
proc castpd*(a: m256): m256d {.importc: "_mm256_castps_pd", header: "immintrin.h".}
proc castsi256*(a: m256): m256i {.importc: "_mm256_castps_si256",
                              header: "immintrin.h".}
proc castps256*(a: m128): m256 {.importc: "_mm256_castps128_ps256",
                             header: "immintrin.h".}
proc castps128*(a: m256): m128 {.importc: "_mm256_castps256_ps128",
                             header: "immintrin.h".}
proc castsi256*(a: m128i): m256i {.importc: "_mm256_castsi128_si256",
                               header: "immintrin.h".}
proc castpd*(a: m256i): m256d {.importc: "_mm256_castsi256_pd", header: "immintrin.h".}
proc castps*(a: m256i): m256 {.importc: "_mm256_castsi256_ps", header: "immintrin.h".}
proc castsi128*(a: m256i): m128i {.importc: "_mm256_castsi256_si128",
                               header: "immintrin.h".}
proc ceil*(a: m256d): m256d {.importc: "_mm256_ceil_pd", header: "immintrin.h".}
proc ceil*(a: m256): m256 {.importc: "_mm256_ceil_ps", header: "immintrin.h".}
proc cmp*(a: m128d; b: m128d; imm8: cint): m128d {.importc: "_mm_cmp_pd",
    header: "immintrin.h".}
proc cmp*(a: m256d; b: m256d; imm8: cint): m256d {.importc: "_mm256_cmp_pd",
    header: "immintrin.h".}
proc cmp*(a: m128; b: m128; imm8: cint): m128 {.importc: "_mm_cmp_ps",
                                        header: "immintrin.h".}
proc cmp*(a: m256; b: m256; imm8: cint): m256 {.importc: "_mm256_cmp_ps",
                                        header: "immintrin.h".}
proc cmp_sd*(a: m128d; b: m128d; imm8: cint): m128d {.importc: "_mm_cmp_sd",
    header: "immintrin.h".}
proc cmp_ss*(a: m128; b: m128; imm8: cint): m128 {.importc: "_mm_cmp_ss",
    header: "immintrin.h".}
proc cmpeq_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_cmpeq_epi16",
    header: "immintrin.h".}
proc cmpeq_epi32*(a: m256i; b: m256i): m256i {.importc: "_mm256_cmpeq_epi32",
    header: "immintrin.h".}
proc cmpeq_epi64*(a: m256i; b: m256i): m256i {.importc: "_mm256_cmpeq_epi64",
    header: "immintrin.h".}
proc cmpeq_epi8*(a: m256i; b: m256i): m256i {.importc: "_mm256_cmpeq_epi8",
                                        header: "immintrin.h".}
proc cmpgt_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_cmpgt_epi16",
    header: "immintrin.h".}
proc cmpgt_epi32*(a: m256i; b: m256i): m256i {.importc: "_mm256_cmpgt_epi32",
    header: "immintrin.h".}
proc cmpgt_epi64*(a: m256i; b: m256i): m256i {.importc: "_mm256_cmpgt_epi64",
    header: "immintrin.h".}
proc cmpgt_epi8*(a: m256i; b: m256i): m256i {.importc: "_mm256_cmpgt_epi8",
                                        header: "immintrin.h".}
proc cvtepi16_epi32*(a: m128i): m256i {.importc: "_mm256_cvtepi16_epi32",
                                    header: "immintrin.h".}
proc cvtepi16_epi64*(a: m128i): m256i {.importc: "_mm256_cvtepi16_epi64",
                                    header: "immintrin.h".}
proc cvtepi32_epi64*(a: m128i): m256i {.importc: "_mm256_cvtepi32_epi64",
                                    header: "immintrin.h".}
proc cvtepi32*(a: m128i): m256d {.importc: "_mm256_cvtepi32_pd", header: "immintrin.h".}
proc cvtepi32*(a: m256i): m256 {.importc: "_mm256_cvtepi32_ps", header: "immintrin.h".}
proc cvtepi8_epi16*(a: m128i): m256i {.importc: "_mm256_cvtepi8_epi16",
                                   header: "immintrin.h".}
proc cvtepi8_epi32*(a: m128i): m256i {.importc: "_mm256_cvtepi8_epi32",
                                   header: "immintrin.h".}
proc cvtepi8_epi64*(a: m128i): m256i {.importc: "_mm256_cvtepi8_epi64",
                                   header: "immintrin.h".}
proc cvtepu16_epi32*(a: m128i): m256i {.importc: "_mm256_cvtepu16_epi32",
                                    header: "immintrin.h".}
proc cvtepu16_epi64*(a: m128i): m256i {.importc: "_mm256_cvtepu16_epi64",
                                    header: "immintrin.h".}
proc cvtepu32_epi64*(a: m128i): m256i {.importc: "_mm256_cvtepu32_epi64",
                                    header: "immintrin.h".}
proc cvtepu8_epi16*(a: m128i): m256i {.importc: "_mm256_cvtepu8_epi16",
                                   header: "immintrin.h".}
proc cvtepu8_epi32*(a: m128i): m256i {.importc: "_mm256_cvtepu8_epi32",
                                   header: "immintrin.h".}
proc cvtepu8_epi64*(a: m128i): m256i {.importc: "_mm256_cvtepu8_epi64",
                                   header: "immintrin.h".}
proc cvtpd_epi32*(a: m256d): m128i {.importc: "_mm256_cvtpd_epi32",
                                 header: "immintrin.h".}
proc cvtpd*(a: m256d): m128 {.importc: "_mm256_cvtpd_ps", header: "immintrin.h".}
proc cvtps_epi32*(a: m256): m256i {.importc: "_mm256_cvtps_epi32",
                                header: "immintrin.h".}
proc cvtps*(a: m128): m256d {.importc: "_mm256_cvtps_pd", header: "immintrin.h".}
proc cvttpd_epi32*(a: m256d): m128i {.importc: "_mm256_cvttpd_epi32",
                                  header: "immintrin.h".}
proc cvttps_epi32*(a: m256): m256i {.importc: "_mm256_cvttps_epi32",
                                 header: "immintrin.h".}
proc `div`*(a: m256d; b: m256d): m256d {.importc: "_mm256_div_pd", header: "immintrin.h".}
proc `div`*(a: m256; b: m256): m256 {.importc: "_mm256_div_ps", header: "immintrin.h".}
